<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.progettopdm.lyricbuddy.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home">
        <action
            android:id="@+id/action_navigation_home_to_navigation_album_tracklist"
            app:destination="@id/navigation_album_tracklist" />
        <action
            android:id="@+id/action_navigation_home_to_navigation_playlist_tracklist"
            app:destination="@id/navigation_playlist_tracklist" />
    </fragment>

    <fragment
        android:id="@+id/navigation_search"
        android:name="com.progettopdm.lyricbuddy.ui.search.SearchFragment"
        android:label="@string/title_search"
        tools:layout="@layout/fragment_search" />

    <fragment
        android:id="@+id/navigation_favorites"
        android:name="com.progettopdm.lyricbuddy.ui.favorites.FavoritesFragment"
        android:label="@string/title_favorites"
        tools:layout="@layout/fragment_favorites" />

    <fragment
        android:id="@+id/navigation_userprofile"
        android:name="com.progettopdm.lyricbuddy.ui.userprofile.UserProfileFragment"
        android:label="@string/title_userprofile"
        tools:layout="@layout/fragment_userprofile" />

    <fragment
        android:id="@+id/navigation_album_tracklist"
        android:name="com.progettopdm.lyricbuddy.ui.tracklist.AlbumTrackListFragment"
        android:label="Album Track List">
        <argument
            android:name="albumTrackList"
            app:argType="com.progettopdm.lyricbuddy.model.response.AlbumTrackListResponse" />
    </fragment>

    <fragment
        android:id="@+id/navigation_playlist_tracklist"
        android:name="com.progettopdm.lyricbuddy.ui.tracklist.PlaylistTrackListFragment"
        android:label="Playlist Track List">
        <argument
            android:name="playlistTrackList"
            app:argType="com.progettopdm.lyricbuddy.model.response.PlaylistTrackListResponse" />
    </fragment>


    <fragment
        android:id="@+id/navigation_track"
        android:name="com.progettopdm.lyricbuddy.ui.track.TrackFragment"
        android:label="@string/title_track"
        tools:layout="@layout/fragment_track">

    </fragment>

    <action
        android:id="@+id/action_global_navigation_album_tracklist"
        app:destination="@id/navigation_album_tracklist" />

    <action
        android:id="@+id/action_global_navigation_playlist_tracklist"
        app:destination="@id/navigation_playlist_tracklist" />

    <action
        android:id="@+id/action_global_navigation_userprofile"
        app:destination="@id/navigation_userprofile" />

    <action
        android:id="@+id/action_global_navigation_track"
        app:destination="@+id/navigation_track" />

</navigation>