<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient"
    tools:context=".authentication.RegistrationFragment">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:fontFamily="sans-serif-medium"
        android:text="@string/app_name"
        android:textAllCaps="true"
        android:textColor="#fff"
        android:textSize="40sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="80dp"
        android:layout_marginEnd="32dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView">

        <EditText
            android:id="@+id/fullName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="#fff"
            android:ems="10"
            android:foregroundTint="#fff"
            android:hint="@string/full_name"
            android:inputType="textPersonName"
            android:textColorHint="@color/grey" />

        <EditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="#fff"
            android:ems="10"
            android:foregroundTint="#fff"
            android:hint="@string/email_address"
            android:inputType="textPersonName"
            android:textColorHint="@color/grey" />

        <EditText
            android:id="@+id/phoneNumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:backgroundTint="#fff"
            android:ems="10"
            android:foregroundTint="#fff"
            android:hint="@string/phone"
            android:inputType="phone"
            android:textColorHint="@color/grey" />

        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="#fff"
            android:ems="10"
            android:foregroundTint="#fff"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:textColorHint="@color/grey" />

        <EditText
            android:id="@+id/confPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="#fff"
            android:ems="10"
            android:foregroundTint="#fff"
            android:hint="@string/confirm_password"
            android:inputType="textPassword"
            android:textColorHint="@color/grey" />

        <Button
            android:id="@+id/button_createAccount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="48dp"
            android:background="@drawable/button_white"
            android:text="@string/createAccount"
            android:textColor="@color/black"/>

        <Button
            android:id="@+id/backtologin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/button_white"
            android:text="@string/backtologin"
            android:textColor="@color/black"
            android:layout_marginTop="20dp"
            app:layout_constraintTop_toBottomOf="@+id/button_createAccount"/>


    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>