<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient"
    android:orientation="vertical"
    tools:context=".login.Register">




    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:fontFamily="sans-serif-medium"
        android:text="@string/app_name"
        android:textAllCaps="true"
        android:textColor="#fff"
        android:textSize="32sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="80dp"
        android:layout_marginEnd="32dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView">

        <EditText
            android:id="@+id/full_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="#fff"
            android:ems="10"
            android:foregroundTint="#fff"
            android:hint="@string/full_name"
            android:inputType="textPersonName"
            android:textColorHint="#B6B2B2" />

        <EditText
            android:id="@+id/email_address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:backgroundTint="#fff"
            android:ems="10"
            android:foregroundTint="#fff"
            android:hint="@string/email_address"
            android:inputType="textPersonName"
            android:textColorHint="#B6B2B2" />

        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:backgroundTint="#fff"
            android:ems="10"
            android:foregroundTint="#fff"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:textColorHint="#B6B2B2" />

        <EditText
            android:id="@+id/confirm_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:backgroundTint="#fff"
            android:ems="10"
            android:foregroundTint="#fff"
            android:hint="@string/confirm_password"
            android:inputType="textPassword"
            android:textColorHint="#B6B2B2" />

        <Button
            android:id="@+id/button_register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="48dp"
            android:background="@drawable/button_login"
            android:text="Create Account"
            android:textColor="@color/black"/>
    </LinearLayout>



</androidx.constraintlayout.widget.ConstraintLayout>
