<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".ui.home.HomeFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.cardview.widget.CardView
            android:id="@+id/search_card"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="60dp"
            app:cardCornerRadius="20dp"
            app:cardElevation="10dp"
            app:cardMaxElevation="12dp"
            app:cardUseCompatPadding="true"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:cardBackgroundColor="@color/color_foreground"
            >

            <ImageView
                android:id="@+id/search"
                android:layout_width="match_parent"
                android:layout_height="90dp"
                android:layout_marginBottom="20dp"
                android:layout_marginTop="10dp"
                android:layout_gravity="center"
                android:contentDescription="@string/title_search"
                android:src="@drawable/outline_search_24"
                app:tint="@color/white" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|center_horizontal"
                android:layout_marginBottom="10dp"
                android:text="Search a song"
                android:textAllCaps="true"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:textStyle="bold" />

        </androidx.cardview.widget.CardView>


        <TextView
            android:id="@+id/new_release_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:fontFamily="sans-serif-black"
            android:text="@string/new_releases"
            android:textColor="@color/white"
            android:textSize="24sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/search_card" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/new_releases_list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/new_release_text" />

        <TextView
            android:id="@+id/featured_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:fontFamily="sans-serif-black"
            android:text="@string/featured_playlists"
            android:textColor="@color/white"
            android:textSize="24sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/new_releases_list" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/featured_playlist_list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="70dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/featured_text" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>